deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cassandra
  name: ruby-app
  labels:
     app: ruby-app

spec:
  replicas: 3
  selector:
    matchLabels:
        app: ruby-app
        tier: frontend
  template:
    metadata:
      labels:
        app: ruby-app
        tier: frontend
    spec:
     containers:
     - name: master
       image: nik94gp/rubyapp:tagVersion
       imagePullPolicy: IfNotPresent
       command: ["/bin/bash"]
       args: ["-c", "sleep 20; rails cequel:migrate; sleep 30; rails db:migrate RAILS_ENV=development; rails server -p 3000 -b 0.0.0.0"]
       resources:
         requests:
           cpu: 100m
           memory: 100Mi
       ports:
       - containerPort: 3000
