svc-cassandra-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  namespace: cassandra
  name: cassandra
  labels:
     app: cassandra
spec:
  clusterIP: None
 # PublishNotReadyAddresses: true
  ports:
    - port: 9042
      name: cql
  selector:
    app: cassandra
