svc-ruby-clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  namespace: cassandra
  name: svc-ruby-clusterip
  labels:
    app: ruby-app
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
     app: ruby-app
