svc-ruby-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  namespace: cassandra
  name: ruby-nodeport
  labels:
    app: ruby-app

spec:
  selector:
    app: ruby-app
  type: NodePort
  ports:
  - nodePort: 31100
    port: 80
    targetPort: 3000
