ingress-ruby.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: cassandra
  name: ingress-ruby
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hostname
    http:
      paths:
      - path: /
        backend:
          serviceName: svc-ruby-clusterip
          servicePort: 80
